# libromano

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  build.bat  build.sh  libromanoConfig.cmake.in
.github/workflows/: build-linux-X8664.yml  build-linux-x8664.yml  build-linux.yml  build-macos-aarch64.yml  build-windows-x8664.yml  build-windows.yml
cmake/: find_avx.cmake  target_options.cmake
include/libromano/: arena.h  atomic.h  backtrace.h  base64.h  bit.h  bool.h  buffer.h  cli.h  common.h  cpu.h  endian.h  error.h  filesystem.h  flag.h  fmt.h  hash.h  hashmap.h  http.h  int128.h  json.h  libromano.h  logger.h  memory.h  opencl.h  profiling.h  random.h  regex.h  simd.h  socket.h  socket_server.h  stack.h  stack_no_alloc.h  str.h  string.h  string_algo.h  strview.h  thread.h  time.h  vector.h
include/libromano/math/: alg.h  common.h  common32.h  linalg32.h  stats32.h
include/libromano/src/: socket_server.c
include/romanolib/: romanolib.h  socket.h  str.h
scripts/: gen_fmt_tests.py  validate_json.py
src/: CMakeLists.txt  arena.c  atomic.c  backtrace.c  base64.c  buffer.c  cli.c  cpu.c  dll_main.c  error.c  filesystem.c  fmt.c  hash.c  hashmap.c  http.c  json.c  logger.c  math_linalg32.c  math_stats32.c  memory.c  opencl.c  random.c  regex.c  simd.c  socket.c  socket_server.c  stack.c  str.c  string.c  string_algo.c  strview.c  thread.c  time.c  vector.c
stb/: stb_sprintf.h
tests/: CMakeLists.txt  test_arena.c  test_atomic.c  test_backtrace.c  test_base64.c  test_cli.c  test_cpu.c  test_filesystem.c  test_fmt.c  test_hash.c  test_hashmap.c  test_hashmap_benchmark.c  test_hashmap_incremental_64bits_keyval.c  test_hashmap_interning.c  test_hashmap_random_32bits_keyval.c  test_hashmap_random_64bits_keyval.c  test_hashmap_random_64bits_keyval_hash_id.c  test_hashmap_random_string.c  test_hashmap_random_string_10_bytes.c  test_hashmap_random_string_256_bytes.c  test_hashmap_random_string_64_bytes.c  test_hasmap.c  test_http.c  test_int128.c  test_json.c  test_logger.c  test_math_linalg32.c  test_math_stats32.c  test_opencl.c  test_regex.c  test_simdhashmap.c  test_simdhashmap_benchmark.c  test_simdhashmap_incremental_64bits_keyval.c  test_simdhashmap_random_32bits_keyval.c  test_simdhashmap_random_64bits_keyval.c  test_simdhashmap_random_64bits_keyval_hash_id.c  test_simdhashmap_random_string.c  test_simdhashmap_random_string_10_bytes.c  test_simdhashmap_random_string_256_bytes.c  test_simdhashmap_random_string_64_bytes.c  (+12 more)
